--- a/test.html
+++ b/test.html
@@ -2,6 +2,8 @@
   <head>
   </head>
   <body>
-    <script async type="text/javascript" src="https://cdn.remotehq.net/remotehq.js" id="_remotehq_js"></script>
+    <div style="width: 30%;">
+      <script async type="text/javascript" src="./remotehq.js" id="_remotehq_js" data-remotehqcompany="Unlock,Patreon"></script>
+    </div>
   </body>
 </html>
