--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
   </head>
   <body>
     <div style="width: 30%;">
-      <script async type="text/javascript" src="./remotehq.js" id="_remotehq_js" data-remotehqcompany="Unlock,Patreon"></script>
+      <script async type="text/javascript" src="./remotehq.js" id="_remotehq_js" data-remotehqcompany="Productboard"></script>
     </div>
   </body>
 </html>
