--- a/test.html
+++ b/test.html
@@ -2,6 +2,6 @@
   <head>
   </head>
   <body>
-    <script async type="text/javascript" src="https://cdn.remotehq.net/remotehq.js" id="_remotehq_js"></script>
+    <script async type="text/javascript" src="./remotehq.js" id="_remotehq_js"></script>
   </body>
 </html>
